--- a/package.json
+++ b/package.json
@@ -10,14 +10,46 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@types/draft-js": "^0.11.10",
+    "@types/draftjs-to-html": "^0.8.1",
+    "@types/esri-leaflet": "^2.1.9",
+    "@types/esri-leaflet-geocoder": "^2.2.3",
+    "@types/firebase": "^3.2.1",
+    "@types/leaflet": "^1.9.3",
+    "@types/lodash": "^4.14.191",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/react-draft-wysiwyg": "^1.13.4",
+    "@types/react-dropzone": "^5.1.0",
+    "bootstrap": "^5.2.3",
+    "date-fns": "^2.29.3",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "esri-leaflet": "^3.0.10",
+    "esri-leaflet-geocoder": "^3.1.4",
+    "firebase": "^9.15.0",
+    "leaflet": "^1.9.3",
+    "lodash": "^4.17.21",
     "next": "13.1.1",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-dropzone": "^14.2.3",
+    "react-ionicons": "^4.2.0",
+    "react-leaflet": "^4.2.1",
+    "react-redux": "^8.0.5",
+    "react-redux-firebase": "^3.11.0",
+    "react-toastify": "^9.1.1",
+    "redux": "^4.2.0",
+    "redux-firestore": "^1.0.0",
+    "redux-thunk": "^2.4.2",
+    "styled-components": "^5.3.6",
+    "sweetalert2": "^11.6.16",
     "typescript": "4.9.4"
   }
 }
