--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/esri-leaflet-geocoder": "^2.2.3",
     "@types/firebase": "^3.2.1",
     "@types/leaflet": "^1.9.3",
+    "@types/leaflet-geosearch": "^3.0.0",
     "@types/lodash": "^4.14.191",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
@@ -32,6 +33,7 @@
     "esri-leaflet-geocoder": "^3.1.4",
     "firebase": "^9.15.0",
     "leaflet": "^1.9.3",
+    "leaflet-geosearch": "^3.7.0",
     "lodash": "^4.17.21",
     "next": "13.1.1",
     "react": "18.2.0",
