--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "redux": "^4.2.0",
     "redux-firestore": "^1.0.0",
     "redux-thunk": "^2.4.2",
+    "sass": "^1.60.0",
     "styled-components": "^5.3.6",
     "sweetalert2": "^11.6.16",
     "typescript": "4.9.4"
