--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-leaflet": "^4.2.1",
     "react-redux": "^8.0.5",
     "react-redux-firebase": "^3.11.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "redux-firestore": "^1.0.0",
